<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="album_art_desc">Изображение песни\n</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="prev_button_content_desc">Предыдущая песня</string>
    <string name="play_button_content_desc">Воспроизведение</string>
    <string name="pause_button_content_desc">Пауза</string>
    <string name="next_button_content_desc">Следующая песня</string>
    <string name="cover_image_content_desc">Обложка песни</string>
</resources>