<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/spacing_medium"
    android:weightSum="4"
    tools:context=".MusicPlayerFragment">

    <ImageView
        android:id="@+id/song_cover_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/cover_image_content_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_placeholder_cover" />

    <!-- Название трека -->
    <TextView
        android:id="@+id/song_title"
        style="@style/PlayerSongTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        tools:text="@tools:sample/lorem" />

    <!-- Название исполнителя -->
    <TextView
        android:id="@+id/artist_name"
        style="@style/PlayerArtistNameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        tools:text="@tools:sample/lorem" />

    <!-- Название альбома -->
    <TextView
        android:id="@+id/album_name"
        style="@style/PlayerAlbumNameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        tools:text="@tools:sample/lorem/random" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:progressBackgroundTint="@color/onSurface"
        android:thumbTint="@color/primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_extra_small"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/current_time_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/onSurface"
            tools:text="00:00" />

        <TextView
            android:id="@+id/duration_song_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/onSurface"
            tools:text="00:00" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/previous_button"
            style="@style/PlayerButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/spacing_extra_large"
            android:contentDescription="@string/prev_button_content_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_skip_previous" />

        <ImageButton
            android:id="@+id/play_button"
            style="@style/PlayerButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/play_button_content_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play" />

        <ImageButton
            android:id="@+id/pause_button"
            style="@style/PlayerButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/pause_button_content_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_pause"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/next_button"
            style="@style/PlayerButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/spacing_extra_large"
            android:contentDescription="@string/next_button_content_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_skip_next" />

    </LinearLayout>
</LinearLayout>